# the-finals-eclipper

./: .gitignore  README.md  building-on-windows.md  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
cli/: Cargo.toml
cli/src/: cache_clips.rs  clip_writer.rs  lib.rs  process.rs  process_frame.rs  video_decoder.rs
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_server.rs  image_experimenter.rs  main.rs  pixels_to_base64_image.rs
src/components/: AddClipDialog.vue  ChooseFile.vue  FramePreview.vue  ImageExperimenter.vue  LogModal.vue  PlayHead.vue  ProcessingProgress.vue  TimelineClip.vue  UploadingVirus.vue  VideoPlayer.vue
src/composables/: fileServerAddress.ts  input.ts  log.ts  previewFrame.ts  processVideo.ts  threads.ts
src/constants/: routes.ts
src/pages/: ChooseFilePage.vue  EditClipsPage.vue  ProcessingPage.vue
src/router/: index.ts
src/types/: undoItem.ts
src/utils/: base64.ts  computePlayHeadTime.ts  wrappedDiff.ts
